adding subystem requirements